Se actualizan las rutas en el index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Olga Maria Torcates</title>
-    <link rel="stylesheet" href="../proyecto-1-cod-latam/css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
         <style>
           @import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400;800&family=Playfair+Display:wght@700&display=swap");
         </style>
@@ -13,7 +13,7 @@
     <ul>
       <ol class="columna">
         <a href="index.html">
-          <img id="logo" src="../proyecto-1-cod-latam/img/logo/Olga.jpg" />
+          <img id="logo" src="../img/logo/Olga.jpg" />
         <br/>
         </a>
       </ol>
@@ -33,7 +33,7 @@
           <br /><br /><br /><br /><br /><br /><br />
           <section id="primerParrafo">
             <div class="centrar">
-              <img src="../proyecto-1-cod-latam/img/foto.jpg" class="circulo" />
+              <img src="../img/foto.jpg" class="circulo" />
             </div>
             <div class="parrafo1">
               <h1>Hola! Soy Olga Maria Torcates</h1>
@@ -53,7 +53,7 @@
 
             <div class="parteBoton">
               <button class="boton">
-                <a href="../proyecto-1-cod-latam/img/cvOlga.jpg" target="_blank"> DESCARGAR MI CV</a>
+                <a href="../img/cvOlga.jpg" target="_blank"> DESCARGAR MI CV</a>
               </button>
             </div>
           </section>
