--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Olga Maria Torcates</title>
-    <link rel="stylesheet" href="./CSS/styles.css"/>
+    <link rel="stylesheet" href="./css/styles.css"/>
         <style>
           @import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400;800&family=Playfair+Display:wght@700&display=swap");
         </style>
