--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Olga Maria Torcates</title>
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
         <style>
           @import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400;800&family=Playfair+Display:wght@700&display=swap");
         </style>
@@ -13,7 +13,7 @@
     <ul>
       <ol class="columna">
         <a href="index.html">
-          <img id="logo" src="../img/logo/Olga.jpg" />
+          <img id="logo" src="img/logo/Olga.jpg" />
         <br/>
         </a>
       </ol>
@@ -33,7 +33,7 @@
           <br /><br /><br /><br /><br /><br /><br />
           <section id="primerParrafo">
             <div class="centrar">
-              <img src="../img/foto.jpg" class="circulo" />
+              <img src="img/foto.jpg" class="circulo" />
             </div>
             <div class="parrafo1">
               <h1>Hola! Soy Olga Maria Torcates</h1>
@@ -53,7 +53,7 @@
 
             <div class="parteBoton">
               <button class="boton">
-                <a href="../img/cvOlga.jpg" target="_blank"> DESCARGAR MI CV</a>
+                <a href="img/cvOlga.jpg" target="_blank"> DESCARGAR MI CV</a>
               </button>
             </div>
           </section>
@@ -79,17 +79,17 @@
               <ul id="piePagina">
                 <li>
                   <a href="mailto:olgatorcates99@gmail.com" target="_blank">
-                    <img class="mail" src="./img/mail.png" alt="mail" />
+                    <img class="mail" src="img/mail.png" alt="mail" />
                   </a>
                 </li>
                 <li>
                   <a href="https://github.com/olgatorcates99/mi-proyecto" target="_blank">
-                    <img class="gif" src="./img/github.png" alt="git" />
+                    <img class="gif" src="img/github.png" alt="git" />
                   </a>
                 </li>
                 <li>
                   <a href="https://www.linkedin.com/in/olga-torcates-80b0bb63/" target="_blank">
-                    <img class="link" src="./img/linkedin.png" alt="" />
+                    <img class="link" src="img/linkedin.png" alt="" />
                   </a>
                 </li>
               </ul>
